# typegrind

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build_boost.bat  build_boost.sh  build_ejdb.sh  default.xml  symlink.bat
clangTypegrind/include/typegrind/clang/: TypegrindWrapperAction.h
clangTypegrind/src/typegrind/clang/handler/: BaseExprHandler.h  FunctionDeclHandler.cpp  OpDeleteExprHandler.h
doc/: logger_api.md
examples/: .gitignore  complex.cpp  noreturn.cpp  typegrind.json
include/: AppConfig.h  DirectoryMapper.h  DirectoryMapping.h  FileType.h  FileUtils.h  MethodMatcher.h  TypedFile.h
include/typegrind/: FileType.h
include/typegrind/config/: AppConfig.h
include/typegrind/file_utils/: FileUtils.h
scripts/: create_links.bat  create_links.sh
src/: AppConfig.cpp  CMakeLists.txt  DirectoryMapper.cpp  DirectoryMapping.cpp  DirectoryMapping.h  FileUtils.cpp  MethodMatcher.cpp  RegexSet.cpp  TypedFile.cpp
src/common/: AllocationAstConsumer.cpp  AllocationAstConsumer.h  AllocationDecoratorAction.cpp  AllocationDecoratorAction.h  CMakeLists.txt
src/common/copier/: CopierAstConsumer.cpp  CopierAstConsumer.h  DirectoryMapper.cpp  DirectoryMapper.h
src/common/expander/: MacroExpanderAction.cpp  MacroExpanderAction.h
src/common/handler/: .DeleteExprHandler.cpp.swp  .NewExprHandler.cpp.swp  BaseExprHandler.cpp  BaseExprHandler.h  DeleteExprHandler.cpp  DeleteExprHandler.h  FunctionDeclHandler.cpp  FunctionDeclHandler.h  MacroAdder.cpp  MacroAdder.h  MethodDeclHandler.cpp  MethodDeclHandler.h  NewExprHandler.cpp  NewExprHandler.h  OpDeleteExprHandler.cpp  OpDeleteExprHandler.h  OpNewExprHandler.cpp  OpNewExprHandler.h  RecordDeclHandler.cpp  RecordDeclHandler.h
src/tool/: AppConfig.h  CMakeLists.txt  main.cpp
src/typegrind/config/: AppConfig.cpp  DirectoryMapping.cpp  MethodMatcher.cpp
src/typegrind/file_utils/: FileUtils.cpp
src/util/: RegexSet.h
test/: CMakeLists.txt  MethodMatcherTest.cpp  array_delete.cpp  array_new.cpp  default_delete.cpp  default_new.cpp  operator_new_reinterpret.cpp  operator_new_static.cpp  typedef_delete.cpp  typedef_new.cpp  typegrind.json.in
test/basic/: array_delete.cpp  array_new.cpp  array_of_array_delete.cpp  array_of_array_new.cpp  colon_new.cpp  default_delete.cpp  default_new.cpp  operator_delete.cpp  operator_delete_array.cpp  operator_delete_array_of_array.cpp  operator_new_array_of_array_reinterpret.cpp  operator_new_nocast.cpp  operator_new_reinterpret.cpp  operator_new_static.cpp  typedef_delete.cpp  typedef_new.cpp
test/custom_class/: basic_class.cpp  basic_struct.cpp  class_in_anon_namespace.cpp  class_in_class.cpp  class_in_namespace.cpp  extern_c_class.cpp  typedef_in_class.cpp
test/template/: template_class_factory.cpp  template_func_new.cpp  template_func_new_class_template_inner.cpp  template_func_new_inner.cpp  template_func_new_inner_in_template.cpp  template_func_new_inner_typedef.cpp  template_func_new_typedef.cpp
typegrind/: CMakeLists.txt
typegrind-standalone/test/: CMakeLists.txt
typegrind-standalone/test/basic/: array_of_array_new.cpp  not_matched_main.c  operator_new_static.cpp  typedef_new.cpp
typegrind/clangTypegrind/: CMakeLists.txt
typegrind/clangTypegrind/include/typegrind/clang/: AllocationDecoratorAction.h  TypegrindAction.h
typegrind/clangTypegrind/include/typegrind/config/: AppConfig.h  DirectoryMapper.h  MethodMatcher.h
typegrind/clangTypegrind/include/typegrind/file_utils/: FileUtils.h
typegrind/clangTypegrind/src/typegrind/: CMakeLists.txt
typegrind/clangTypegrind/src/typegrind/clang/: AllocationAstConsumer.cpp  AllocationAstConsumer.h  AllocationDecoratorAction.cpp  TypegrindAction.cpp  (+1 more)
typegrind/clangTypegrind/test/: CMakeLists.txt
typegrind/core/src/: CMakeLists.txt
typegrind/core/test/: MethodMatcherTest.cpp
typegrind/examples/: complex.cpp  op_new_arr_reinterpret_cast.cpp  op_new_reinterpret_cast.cpp  typegrind.json
typegrind/src/: main.cpp
typegrind/test/: a.out  typegrind.json.in
typegrind/test/basic/: matched_method.cpp
typegrind/test/template/: template_class_factory.cpp  template_func_new.cpp
typegrind/typegrind-standalone/: CMakeLists.txt
typegrind/typegrind-standalone/test/: lit.cfg  lit.site.cfg.in
typegrind/typegrind-standalone/test/basic/: array_delete.cpp  array_of_array_delete.cpp  auto_matched_main.cpp  colon_new.cpp  default_delete.cpp  default_new.cpp  operator_new_array_of_array_reinterpret.cpp  operator_new_reinterpret.cpp  typedef_delete.cpp
typegrind/typegrind-standalone/test/custom_class/: basic_class.cpp  basic_struct.cpp  class_in_anon_namespace.cpp  class_in_class.cpp  class_in_namespace.cpp  typedef_in_class.cpp
typegrind/typegrind-standalone/test/template/: template_dependent_delete.cpp  template_func_new_inner.cpp  template_func_new_typedef.cpp
(+25 files in other folders)
